<resources>
    <string name="app_name">MarvelApp</string>
    <string name="comic">Comic</string>
    <string name="character">Character</string>
    <string name="search_hint_character">Search Character...</string>
    <string name="filter_by_released">Filter by released</string>
    <string name="this_month">This Month</string>
    <string name="next_week">Next Week</string>
    <string name="last_week">Last Week</string>
    <string name="this_week">This Week</string>
    <string name="clear">Clear</string>

    <string-array name="search_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
    </string-array>
</resources>